--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,8 @@
 REACT_APP_NETWORK_URL="https:127.0.0.1:8545"
 REACT_APP_CHAIN_ID="56"
 REACT_APP_GTAG = "GTM-PXLD3XW"
+
+REACT_APP_NETWORK_URL="https://bsc-dataseed1.defibit.io"
+
+REACT_APP_BACKEND_URL="http://localhost:8000"
+REACT_APP_PRESALE_RECEIVER_ADDRESS="0x1370213029324d8526fa4c2e750dec15a14fc4f8"
