--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
 REACT_APP_NETWORK_URL="https://bsc-dataseed1.defibit.io"
 REACT_APP_CHAIN_ID="56"
 REACT_APP_GTAG = "GTM-TLF66T4"
+
+REACT_APP_BACKEND_URL="https://exchange.123swap.finance"
+REACT_APP_PRESALE_RECEIVER_ADDRESS="0x1370213029324d8526fa4c2e750dec15a14fc4f8"
