--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@123swap/swap-sdk": "^2.3.11",
-    "@123swap/uikit": "^0.23.24",
+    "@123swap/swap-sdk": "^2.3.14",
+    "@123swap/uikit": "^0.23.28",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
@@ -49,6 +49,7 @@
     "multicodec": "^2.0.0",
     "multihashes": "^3.0.1",
     "polished": "^3.3.2",
+    "quickswap-sdk": "^3.0.8",
     "react": "^17.0.1",
     "react-device-detect": "^1.6.2",
     "react-dom": "^17.0.1",
