--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@123swap/swap-sdk": "^2.3.14",
-    "@123swap/uikit": "^0.23.28",
+    "@123swap/swap-sdk": "^2.3.17",
+    "@123swap/uikit": "^0.23.30",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
+    "@pangolindex/exchange-contracts": "^1.0.2",
+    "@pangolindex/sdk": "^1.1.0",
+    "@partyswap-libs/sdk": "^1.0.13",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
