--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@123swap/swap-sdk": "^2.3.17",
+    "@123swap/swap-sdk": "^2.3.18",
     "@123swap/uikit": "^0.23.30",
+    "@ac32/spookyswap-sdk": "^1.0.0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
