--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@123swap/swap-sdk": "^2.3.18",
-    "@123swap/uikit": "^0.23.30",
+    "@123swap/swap-sdk": "^2.3.19",
+    "@123swap/uikit": "^0.23.37",
     "@ac32/spookyswap-sdk": "^1.0.0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
+    "@harmony-js/utils": "^0.1.56",
     "@pangolindex/exchange-contracts": "^1.0.2",
     "@pangolindex/sdk": "^1.1.0",
     "@partyswap-libs/sdk": "^1.0.13",
@@ -17,6 +18,7 @@
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
     "@reduxjs/toolkit": "^1.3.5",
+    "@sushiswap/sdk": "^5.0.0-canary.100",
     "@types/lodash.flatmap": "^4.5.6",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^14.14.16",
