--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@123swap/swap-sdk": "^2.3.22",
-    "@123swap/uikit": "^0.23.38",
+    "@123swap/swap-sdk": "^2.3.23",
+    "@123swap/uikit": "^0.23.42",
     "@ac32/spookyswap-sdk": "^1.0.0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
@@ -71,7 +71,8 @@
     "rebass": "^4.0.7",
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vvs-sdk": "^2.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
