--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@123swap/swap-sdk": "^2.3.24",
-    "@123swap/uikit": "^0.23.48",
+    "@123swap/uikit": "^0.23.50",
     "@ac32/spookyswap-sdk": "^1.0.0",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.8.16",
@@ -18,7 +18,7 @@
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
     "@reduxjs/toolkit": "^1.3.5",
-    "@sushiswap/sdk": "^5.0.0-canary.100",
+    "@sushiswap/sdk": "5.0.0-canary.112",
     "@types/lodash.flatmap": "^4.5.6",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^14.14.16",
